--- a/app/src/main/res/layout/activity_note_edit.xml
+++ b/app/src/main/res/layout/activity_note_edit.xml
@@ -6,35 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".NoteEditActivity">
 
-    <Button
-        android:id="@+id/backButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Назад"
-        android:onClick="OnBackButtonClick"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/themeEditText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="91dp"
-        android:ems="10"
-        android:inputType="text"
-        android:text="Name"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/backButton"
-        tools:layout_editor_absoluteY="3dp" />
-
-    <EditText
-        android:id="@+id/noteEditText"
-        android:layout_width="379dp"
-        android:layout_height="497dp"
-        android:layout_marginTop="48dp"
-        android:ems="10"
-        android:inputType="text"
-        android:text="Name"
-        app:layout_constraintTop_toBottomOf="@+id/themeEditText"
-        tools:layout_editor_absoluteX="16dp" />
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragmentContainerView"
+        android:name="com.example.myapplication.NoteEditFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+/>
 </androidx.constraintlayout.widget.ConstraintLayout>
